--- a/Allfiles/dotnet/Mod07/Labfiles/Starter/Contoso.Events/Contoso.Events.Management/Web.config
+++ b/Allfiles/dotnet/Mod07/Labfiles/Starter/Contoso.Events/Contoso.Events.Management/Web.config
@@ -7,7 +7,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
     <add key="SignInQueueName" value="signin" />
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://contosoevents.servicebus.windows.net/;SharedSecretIssuer=owner;SharedSecretValue=3K3nnCKoe/wvN81ccdhZcB2VtLPB16K4+oJiHqHMqX4=" />
+    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]"/>
   </appSettings>
   <connectionStrings>
     <add name="EventsContextConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EventsContextModule7Lab;Integrated Security=True" providerName="System.Data.SqlClient" />
